Updated the footer and added the Netlifly link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>She Codes Weather App</h1>
-    <p>
+    <footer>
       The project was coded by
       <a href="https://github.com/Nomfanelo-S" target="_blank">
         Nomfanelo Skhosana</a
@@ -19,7 +19,9 @@
         >GitHub</a
       >
       and hosted on
-      <a href="" target="_blank">Netlify</a>
-    </p>
+      <a href="https://skhosanaweatherapp.netlify.app/" target="_blank"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
