--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <title>SheCodes Weather App</title>
   </head>
   <body>
-    <h1>She Codes Weather App</h1>
+    <header>
+      <form>
+        <input type="search" />
+        <input type="submit" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Johannesburg</h1>
+        <p>
+          Saturday 15:32, moderate rain <br />
+          Humidity: 12% Wind: 5 km/h
+        </p>
+      </div>
+      <div>🌧️ 12 °C</div>
+    </main>
+
     <footer>
       The project was coded by
       <a href="https://github.com/Nomfanelo-S" target="_blank">
