--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="styles.css" href="src/styles.css" />
+    <link rel="stylesheet" href="src/styles.css" />
     <title>SheCodes Weather App</title>
   </head>
   <body>
