--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div>
           <form>
-        <input type="search" class="search" placeholer="Enter a city" id="search-input"required/>
+        <input type="search" class="search-input" placeholer="Enter a city" id="search-input"required/>
         <input type="submit" class="search-button" id="search-button"/>
       </form>
     </header>
