Set up search button
Set up the CSS for the search button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
       <div>
-        <h1 class="current-city" id="current-id">Johannesburg</h1>
+        <h1 class="current-city" id="current-city">Johannesburg</h1>
         <p>
           <span class="current-date"></span>Saturday 15:32, moderate rain <br />
           Humidity: <strong>12%</strong> Wind: <strong>5 km/h</strong>
