Set up Weather Status
Added the class weather status and then followed by adding CSS properties.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       </form>
     </header>
     <main>
-      <div>
+      <div class="weather-status">
+        <div class="current-weather">
         <h1 class="current-city" id="current-city">Johannesburg</h1>
         <p>
           <span class="current-date"></span>Saturday 15:32, moderate rain <br />
@@ -29,7 +30,9 @@
       <div class="current-temperature">
         <span class="current-temperature-icon">🌧️</span> 
         <span class="current-temperature-value">12</span>
-        <span class="current-temperature-unit">°C</span></div>
+        <span class="current-temperature-unit">°C</span>
+    </div>
+   </div>
     </main>
 
     <footer>
