--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       <div class="weather-status">
         <div class="current-weather">
         <h1 class="current-city" id="current-city">Johannesburg</h1>
-        <p>
-          <span class="current-date"></span>Saturday 15:32, moderate rain <br />
+        <p class="weather-details">
+          <span class="current-date" id="current-date">Saturday 15:32</span>, moderate rain <br />
           Humidity: <strong>12%</strong> Wind: <strong>5 km/h</strong>
         </p>
       </div>
       <div class="current-temperature">
-        <span class="current-temperature-icon">🌧️</span> 
+        <span class="current-temperature-icon" >🌧️</span> 
         <span class="current-temperature-value">12</span>
         <span class="current-temperature-unit">°C</span>
     </div>
