Additions in HTML and JS
Added id element in HTML.
Added addEventListener and event to JavaScript

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </p>
       </div>
       <div class="current-temperature">
-        <span class="current-temperature-icon" >🌧️</span> 
-        <span class="current-temperature-value">12</span>
-        <span class="current-temperature-unit">°C</span>
+        <span class="current-temperature-icon" id="current-temperature-icon">🌧️</span> 
+        <span class="current-temperature-value" id="current-temperature-value">12</span>
+        <span class="current-temperature-unit" id="current-temperature-unit">°C</span>
     </div>
    </div>
     </main>
@@ -54,4 +54,5 @@
         </div>
      
   </body>
+  <script src="src/index.js"></script>
 </html>
