Additions to HTML and changes to JS
Added id=search form
Added function event to JS

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
     <header>
         <div>
-          <form>
+          <form id="search-form">
         <input type="search" class="search-input" placeholer="Enter a city" id="search-input"required/>
         <input type="submit" class="search-button" id="search-button"/>
       </form>
