Updated HTML called Search City

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
       <div class="weather-status">
         <div class="current-weather">
-        <h1 class="current-city" id="current-city">Johannesburg</h1>
+        <h1 class="current-city" id="current-city"></h1>
         <p class="weather-details">
           <span class="current-date" id="current-date">Saturday 15:32</span>, moderate rain <br />
           Humidity: <strong>12%</strong> Wind: <strong>5 km/h</strong>
@@ -31,7 +31,7 @@
       </div>
       <div class="current-temperature">
         <span class="current-temperature-icon" id="current-temperature-icon">🌧️</span> 
-        <span class="current-temperature-value" id="current-temperature-value">12</span>
+        <span class="current-temperature-value" id="current-temperature-value"></span>
         <span class="current-temperature-unit" id="current-temperature-unit">°C</span>
     </div>
    </div>
