--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="current-weather">
         <h1 class="current-city" id="current-city"></h1>
         <p class="weather-details">
-          <span class="current-date" id="current-date">Saturday 15:32</span>, moderate rain <br />
-          Humidity: <strong>12%</strong> Wind: <strong>5 km/h</strong>
+          <span class="current-date" id="current-date"></span>, <span id="weather-description"></span> <br />
+          <span > Humidity: <strong id="humidity"> %</strong></span> <span>Wind: <strong id="wind"></strong></span>
         </p>
       </div>
       <div class="current-temperature">
