Fixed errors in HTML and JS

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </p>
       </div>
       <div class="current-temperature">
-        <span  >
-            <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png" class="current-temperature-icon" id="current-temperature-icon">
+        <span id="icon">
+            <img src="" class="current-temperature-icon" id="current-temperature-icon">
         </span> 
         <span class="current-temperature-value" id="current-temperature-value"></span>
         <span class="current-temperature-unit" id="current-temperature-unit">°C</span>
